<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".first.FirstActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_photo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameEditText"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/palindromEditText"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/palindrom"
        android:inputType="text"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCheck"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:background="@drawable/button_background"
        android:textColor="#FFFFFF"
        android:layout_marginTop="50dp"
        android:text="@string/check"
        app:layout_constraintTop_toBottomOf="@+id/palindromEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:background="@drawable/button_background"
        android:textColor="#FFFFFF"
        android:layout_marginTop="16dp"
        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@+id/btnCheck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
